# zvec-rs

./: Cargo.toml  README.md
benches/: benchmarks.rs  hnsw_bench.rs
src/: cluster.rs  collection.rs  ivf.rs  lib.rs  multi_vector.rs  quantize.rs  query.rs  schema.rs  sparse.rs
src/distance/: mod.rs  neon.rs  scalar.rs  x86.rs
src/extension/: embedding.rs  error.rs  http_embedding.rs  mod.rs  openai.rs  reranker.rs  rrf_reranker.rs  weighted_reranker.rs
src/filter/: mod.rs  parser.rs
src/hnsw/: graph.rs  mod.rs  params.rs  search.rs  sparse.rs
src/storage/: memory_backend.rs  mod.rs  redb_backend.rs
