[package]
name = "zvec-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance embedded vector database in pure Rust"
license = "MIT"

[dependencies]
parking_lot = "0.12"
rand = "0.8"
ordered-float = "4"
rayon = "1.10"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "hnsw_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
