[package]
name = "zvec-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance embedded vector database in pure Rust"
license = "MIT"

[dependencies]
parking_lot = "0.12"
rand = "0.8"
ordered-float = "4"
rayon = "1.10"
redb = "2"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
openai = ["dep:reqwest"]
http-embedding = ["dep:reqwest"]
async = ["dep:reqwest", "dep:async-trait", "dep:tokio"]

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
